[tool.poetry]
name = "dos-locos"
version = "0.1.0"
description = ""
authors = ["Rajat Jacob <rajatjacob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.37.2"
torch = "^2.2.0"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"
open3d = "^0.18.0"
scikit-learn = "^1.4.0"
addict = "^2.4.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
